# openrouter-skills

./: .gitignore  README.md
.claude-plugin/: plugin.json
.cursor-plugin/: plugin.json
open-responses/: SKILL.md
skills/create-agent-tui/: README.md  SKILL.md  metadata.json
skills/create-agent-tui/sample/: .gitignore  pyproject.toml  test-tui.md
skills/create-agent-tui/sample/src/: __init__.py  agent.py  banner.py  cli.py  commands.py  config.py  loader.py  renderer.py  session.py  terminal_bg.py
skills/create-agent-tui/sample/src/tools/: __init__.py  custom.py  file_edit.py  file_read.py  file_write.py
skills/create-headless-agent/: README.md  SKILL.md  metadata.json
skills/create-headless-agent/sample/: pyproject.toml  requirements.txt
skills/create-headless-agent/sample/src/: __init__.py  agent.py  cli.py  config.py  session.py
skills/create-headless-agent/sample/src/tools/: __init__.py  glob_tool.py  grep_tool.py  list_dir.py  shell.py
skills/create-headless-agent/sample/test/: test_config.py  test_output_schema.py  test_retry.py
skills/openrouter-agent-migration/: README.md  SKILL.md  metadata.json
skills/openrouter-images/: README.md  SKILL.md
skills/openrouter-models/: README.md  SKILL.md
skills/openrouter-oauth/: SKILL.md
skills/openrouter-python-sdk/: README.md  SKILL.md  metadata.json
skills/openrouter-stt/: README.md  SKILL.md
skills/openrouter-tts/: README.md  SKILL.md
skills/openrouter-typescript-sdk/: README.md  SKILL.md  metadata.json
skills/openrouter-video/: README.md  SKILL.md
(+23 files in other folders)
