[project]
name = "my-agent-tui"
version = "1.0.0"
description = "OpenRouter agent TUI scaffold"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
my-agent = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["test"]
