[project]
name = "my-agent"
version = "1.0.0"
description = "Headless OpenRouter agent scaffold"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
my-agent = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["test"]
